# postmortemthis

./: CNAME  Cargo.toml  LICENSE  README.md  index.html  llms.txt  postmortemthis.cmd
.github/workflows/: ci.yml  release.yml
gemshim/: Cargo.toml
gemshim/src/: main.rs
skills/postmortemthis/: SKILL.md  postmortemthis.cmd
src/: agents.rs  gemshim.rs  gemshim_server.rs  gg.rs  git.rs  login.rs  main.rs  openrouter.rs  prompts.rs  runner.rs  settings.rs  setup.rs  vibe.rs
