[package]
# Placeholder: the real version is injected from the git tag at release build
# time via POSTMORTEM_VERSION (see .github/workflows/release.yml and main.rs).
name = "postmortemthis"
version = "0.0.0-dev"
edition = "2024"
description = "One last look before you ship. Runs every AI agent CLI you have on your diff and synthesizes the verdict."
license = "MIT"

[[bin]]
name = "postmortemthis"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
wait-timeout = "0.2"
# `postmortemthis login` runs the OpenRouter token exchange on a small async
# runtime; the normal launcher path never starts one. `net` is needed for the
# IO driver reqwest's HTTP call drives under `block_on`/`enable_all` - reqwest
# pulls it in transitively too, but declare it so this manifest is honest about
# what it relies on.
tokio = { version = "1", features = ["rt", "net", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1"
# `postmortemthis login`: PKCE OAuth against OpenRouter (verifier randomness, the
# S256 challenge, and base64url encoding).
sha2 = "0.10"
base64 = "0.22"
getrandom = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
strip = true
lto = true
