[package]
name = "gemshim"
version = "0.1.0"
edition = "2021"
description = "Local Gemini-protocol -> OpenRouter (OpenAI) translator, spawned by postmortem so the gemini CLI can run on an OpenRouter key."
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1"
